# gam

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  package.json
csrc/: gam.c  gam.h  wl_api.c
scripts/: build-wasm.sh  verify-exports.sh
src/: index.js  model.js  wasm.js
test/: test.js  test_c.c  test_python.py
